	 	were recently added to the default minetest game.
	- Improved the scripts and documentation for generating a colors.txt
		file.
	- HTML versions of documentation in doc/ is now generated, and included
		in the different packages.
	- Documented concurrent minetest & minetestmapper use.
	- Documented the different geometries reported with --verbose
    Bugfixes:
        - Fixed possible compilation failure caused by stdint.h
	- Fixed compilation failure when some database libraries are not installed
		Even when support for some of the databases was not enabled,
		the libraries for those databases still needed to be installed on
		the system for compilation to succeed. Now the libraries no
		longer need to be installed if not used.
	- Fixed backend selection, so that there should no longer be a difference
		between an automatically selected backend, and the same backend
		specified manually.
		(At least one backend-specific (LevelDB-related) option was not
		 taking effect when LevelDB was auto-selected).
[10 mar 2015]
    Enhancements:
	- Added an optimisation option: --disable-blocklist-prefetch.
		With this option, minetestmapper does not query the database to
		make a block list before starting map generation, but directly
		tries to fetch all possible blocks that might be in the mapped space.

		This significantly improves speed on large worlds when mapping a
		small part of them. When mapping a large percentage of the world,
		or when not adequately limiting the mapping height (--min-y and
		--max-y), this option can cause **excessively** long mapping times
		instead.

		Minetestmapper will try and warn about misuse of this option. If
		possible, it will also suggest changes to parameters to make better
		use of this option.
	- Building instructions were improved
	- Mimimum and maximum *mapped* Y coordinates are now reported, and can be
		used as a hint for setting --min-y and --max-y. Blocks containing
		only air are not included.