@@ -10,7 +10,7 @@ public:
 	DBLevelDB(const std::string &mapdir);
 	virtual int getBlocksQueriedCount(void);
 	virtual int getBlocksReadCount(void);
-	virtual const BlockPosList &getBlockPos();
+	virtual const BlockPosList &getBlockPosList();
 	virtual Block getBlockOnPos(const BlockPos &pos);
 	~DBLevelDB();
 private:
