@@ -23,7 +23,7 @@ public:
 	DBSQLite3(const std::string &mapdir);
 	virtual int getBlocksQueriedCount(void);
 	virtual int getBlocksReadCount(void);
-	virtual const BlockPosList &getBlockPos();
+	virtual const BlockPosList &getBlockPosList();
 	virtual Block getBlockOnPos(const BlockPos &pos);
 	~DBSQLite3();
 private:
